--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         <activity
             android:name="com.alantan.virtualpiano.CameraActivity"
             android:label="@string/app_name"
